--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo 'right some tests'",
     "build": "webpack",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "dependencies": {
     "express": "^4.16.4",
@@ -14,8 +15,25 @@
     "webpack": "^4.23.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^1.0.1",
     "eslint": "^5.8.0",
-    "webpack-cli": "^3.1.2"
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "imagemin-webpack-plugin": "^2.3.0",
+    "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.10.0",
+    "responsive-loader": "^1.1.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-md5-hash": "^0.0.6"
   },
   "repository": {
     "type": "git",
