--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo 'right some tests'",
     "build": "webpack",
     "start": "node server.js",
+    "heroku-postbuild": "yarn install && yarn run build",
     "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "dependencies": {
