--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "test": "echo 'right some tests'",
     "build": "webpack",
     "start": "node server.js",
-    "heroku-postbuild": "yarn install && yarn run build",
+    "postinstall": "yarn run build",
     "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "dependencies": {
     "express": "^4.16.4",
-    "path": "^0.12.7",
-    "webpack": "^4.23.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
@@ -32,6 +31,7 @@
     "responsive-loader": "^1.1.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-md5-hash": "^0.0.6"
