--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-    "parserOptions": {
-      "ecmaVersion": 6
-    },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module"
+  },
     "rules": {
       "quotes": ["error", "single"],
       "indent": ["error", 2],
