--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo 'right some tests'",
-    "build": "webpack",
+    "dev": "./node_modules/parcel-bundler/bin/cli.js src/index.html",
+    "build": "./node_modules/parcel-bundler/bin/cli.js build src/index.html",
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.16.4",
-    "path": "^0.12.7",
-    "webpack": "^4.23.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
-    "webpack-cli": "^3.1.2"
+    "parcel-bundler": "^1.10.3",
+    "sass": "^1.15.1"
   },
   "repository": {
     "type": "git",
