--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo 'right some tests'",
     "dev": "./node_modules/parcel-bundler/bin/cli.js src/index.html",
     "build": "./node_modules/parcel-bundler/bin/cli.js build src/index.html",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "yarn run build"
   },
   "dependencies": {
     "express": "^4.16.4",
