--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "postinstall": "yarn run build"
   },
   "dependencies": {
+    "bulma": "^0.7.2",
+    "bulma-carousel": "^3.0.0",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
