--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "yarn run build"
   },
   "dependencies": {
+    "bulma": "^0.7.2",
     "express": "^4.16.4",
     "path": "^0.12.7"
   },
